Archive2/67/716629e5c44711/output
main.cpp:2:15: error: expected '=' before '<' token
 using Iterator<T> = typename T::iterator;
               ^
main.cpp:2:15: error: expected type-specifier before '<' token
