Archive2/67/716629e5c44711/main.cpp
template<typename T>
using Iterator<T> = typename T::iterator;
